--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 .dimple-custom-tooltip-box {
       fill: green !important;
     }
+
+    .tick {
+    fill: rgba(250, 250, 255, 0.6);
+}
+.plot {
+	fill: rgba(250, 250, 255, 0.6);
+}
