--- a/charts/css/style.css
+++ b/charts/css/style.css
@@ -64,6 +64,8 @@ p {
 
 a {
   text-decoration: none;
+  font-family: sourceBold;
+  color: gray;
 }
 
 a:hover {
@@ -73,4 +75,8 @@ a:hover {
 
 ul li {
   display: inline-block;
+}
+
+nav {
+  margin: 0 auto;
 }
