--- a/charts/css/cti.css
+++ b/charts/css/cti.css
@@ -48,6 +48,18 @@
   margin: 0 auto;
 }
 
+#viz_7{
+  width: 800px;
+  height: 400px;
+  margin: 0 auto;
+}
+
+#viz_8{
+  width: 800px;
+  height: 400px;
+  margin: 0 auto;
+}
+
 .column{
   padding: 1%;
   margin: 0 auto;
